turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:57: error: not found: value x
    if(c == colors(i)){x=i}
                       ^Turmite:59: error: not found: value x
  setCouleurBrosse(colors((rule(state)(x)(0))%colors.length));baisseBrosse();leveBrosse()
                                       ^Turmite:60: error: not found: value x
  rule(state)(x)(1)
              ^Turmite:61: error: not found: value x
	state = rule(state)(x)(2)
                            ^Turmite:66: error: not enough arguments for method init: (colors: Array[java.awt.Color])Unit.
Unspecified value parameter colors.
		init();
                    ^